Fix collapsable icon position

--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -74,3 +74,8 @@
   opacity: 1;
   transition-duration: .32s;
 }
+
+// Collapsable icon
+.list-tree.has-collapsable-children .list-nested-item > .list-item::before {
+  vertical-align:middle;
+}
